objects/ssot__FulfillmentOrderTax__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CurrencyCode__c</fullName>
        <label>Currency Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FulfillmentOrderPriceAdjustmentTaxId__c</fullName>
        <label>Fulfillment Order Price Adjustment Tax</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FulfillmentOrderProductTaxId__c</fullName>
        <label>Fulfillment Order Product Tax</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FulfillmentOrderTaxType__c</fullName>
        <label>Fulfillment Order Tax Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Fulfillment Order Tax Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Number__c</fullName>
        <label>Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaxClass__c</fullName>
        <label>Tax Class</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaxEffectiveDate__c</fullName>
        <label>Tax Effective Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TaxErrorMessageText__c</fullName>
        <label>Tax Error Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaxRatePercent__c</fullName>
        <label>Tax Rate Percent</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761213581_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FulfillmentOrderTax_FulfillmentOrder_rel</label>
        <referenceTo>ssot__FulfillmentOrderPriceAdjTax__dlm</referenceTo>
        <relationshipLabel>FulfillmentOrderTax_FulfillmentOrder_rel</relationshipLabel>
        <relationshipName>rel_1697761213581_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761213806_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FulfillmentOrderTax_FulfillmentOrder_rel</label>
        <referenceTo>ssot__FulfillmentOrderProductTax__dlm</referenceTo>
        <relationshipLabel>FulfillmentOrderTax_FulfillmentOrder_rel</relationshipLabel>
        <relationshipName>rel_1697761213806_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>